--- a/template.html
+++ b/template.html
@@ -21,49 +21,41 @@
   <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-nav fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top navbar-brand-centered">  
-      <div class = "container">
-
-        <div class = "logo-navbar">
-            <a href = "template.html">
-              <img src = "logo.png" width = "100" alt = "Logo Thing">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">About Us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Recruitment</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="events.html">Events</a>
+                </li>
+            </ul>
+        </div>
+        <div class="mx-auto order-0">
+            <a class="navbar-brand mx-auto" href="template.html">
+              <img src = "logo.png" width="100" alt="logo thing">
             </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+                <span class="navbar-toggler-icon"></span>
+            </button>
         </div>
-
-          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="about-us.html">About Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="recruitment.html">Recruitment</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="events.html">Events</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="leadership.html">Leadership</a>
-            </li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li class="nav-item">
-              <a class="nav-link" href="sisterhood.html">Sisterhood</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="philanthropy.html">Philanthropy</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact-us.html">Contact Us</a>
-            </li>
-          </ul>
+        <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Leadership</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Sisterhood</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Philanthropy</a>
+                </li>
+            </ul>
         </div>
-      </div>
     </nav>
 
 
