--- a/events.html
+++ b/events.html
@@ -14,7 +14,7 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="modern-business.css" rel="stylesheet">
+    <link href="tridelta.css" rel="stylesheet">
 
     <!-- Social Media Icons-->
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
@@ -45,7 +45,7 @@
         </div>
         <div class="mx-auto order-0">
             <a class="navbar-brand mx-auto" href="template.html">
-              <img src = "logo.png" width="100" alt="logo thing">
+              <img src = "images/logo.png" width="100" alt="logo thing">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
                 <span class="navbar-toggler-icon"></span>
