added to events.html

--- a/events.html
+++ b/events.html
@@ -29,16 +29,16 @@
   <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-md navbar-light">
         <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="#">About Us</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Recruitment</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="events.html">Events</a>
                 </li>
             </ul>
@@ -65,6 +65,44 @@
             </ul>
         </div>
     </nav>
+
+
+        <header>
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+          <!-- Slide One - Set the background image for this slide in the line below -->
+          <div class="carousel-item active" style="background-image: url('./images/events/spiritnight.jpg')">
+          </div>
+          <!-- Slide Two - Set the background image for this slide in the line below -->
+          <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+           <!--  <div class="carousel-caption d-none d-md-block">
+              <h3>Second Slide</h3>
+              <p>This is a description for the second slide.</p>
+            </div> -->
+          </div>
+          <!-- Slide Three - Set the background image for this slide in the line below -->
+          <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+            <!-- <div class="carousel-caption d-none d-md-block">
+              <h3>Third Slide</h3>
+              <p>This is a description for the third slide.</p>
+            </div> -->
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </header>
 
     <!-- Page Content -->
     <div class="events-page">
@@ -100,30 +138,26 @@
  <footer class="py-5 bg-dark">
       <div class="container">
         
-        <div class="row">
-          <div class="col-lg-4">
-            <h2 style="color:white;">
-              GIN System Log In
-            </h2>
-                      <!-- Search Widget -->
-          </div>
-        </div>
-
       <div class="col-sm-4 login">
-        <form action="https://app.ginsystem.us/login" method="post" target="blank">
-          <input type="hidden" name="parent_group" value="ddd">
-          <input type="text" name="username" class="username form-control" placeholder="Delta Delta Delta Username" required>
-          <input type="password" name="password" class="password form-control" placeholder="Delta Delta Delta Password" required>
-          <button type="submit" class="btn btn-default">Log In</button>
-          <p class="forgot">...</p>
-        </form>
+        <h2 style="color:white;">
+          GIN System Log In
+        </h2>
+        <div class="ginsystem-login">
+          <form action="https://app.ginsystem.us/login" method="post" target="blank">
+            <input type="hidden" name="parent_group" value="ddd">
+            <input type="text" name="username" class="username form-control" placeholder="Delta Delta Delta Username" required>
+            <input type="password" name="password" class="password form-control" placeholder="Delta Delta Delta Password" required>
+            <button type="submit" class="btn btn-default">Log In</button>
+            <p class="forgot">...</p>
+          </form>
+        </div>
       </div>
 
           
           <!-- Social Media Icons-->
 
-        <
-        <h5>Follow UCSD Tri Delta</h5>
+      <div class="col-sm-4">
+        <h2 style="color:white;">Follow UCSD Tri Delta</h2>
         <div class="social-icons">
           <div class="col-sm-12">
             <a href="https://www.facebook.com/ucsdtridelta/" target="_blank">
@@ -133,8 +167,9 @@
             </a> 
           </div>
         </div>
+      </div>
       <!-- /.container -->
-    </footer>
+  </footer>
 
 
     <!-- Bootstrap core JavaScript -->
