--- a/template.html
+++ b/template.html
@@ -22,7 +22,7 @@
 
   <body>
 
-    <!-- Navigation -->
+<!-- Navigation -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
 
         <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
@@ -54,7 +54,7 @@
                     <a class="nav-link" href="#">Leadership</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sisterhood</a>
+                    <a class="nav-link" href="sisterhood.html">Sisterhood</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Philanthropy</a>
@@ -64,25 +64,20 @@
     </nav>
 
 
-    <!-- Header image -->
-    <header>
-
-          <!-- Slide One - Set the background image for this slide in the line below -->
-          <div class="carousel-item active" style="background-image: url('images/banner-1.jpeg'); z-index: 2">
-            <div class="carousel-caption d-none d-md-block">
-              <h2>PLACEHOLDER</h2>
-            </div>
-          </div>
- 
-    </header>
-
     <!-- Page Content -->
-    <div class="container">
+   <!--  <div class="container">
       <h1> Heading 1 </h1>
       <h2> Heading 2 </h2>
       <h3> Heading 3 </h3>
       <p> Body paragraphs</p>
       <img src = "images/banner-1.jpeg">
+    </div> -->
+
+    <div class="banner">
+      <img class="banner-image" src="images/banner.jpeg">
+      <div class="banner-text">
+        <h1>Delta Delta Delta @ UCSD</h1>
+      </div>
     </div>
 
         <!-- Footer -->
