--- a/sisterhood.html
+++ b/sisterhood.html
@@ -2,26 +2,35 @@
 <html lang="en">
 
   <head>
-
+    <title>Sisterhood</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
-    <title>Sisterhood</title>
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
     <!-- Custom styles for this template -->
     <link href="tridelta.css" rel="stylesheet">
 
     <!-- Social Media Icons-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+    <script defer src="/vendor/bootstrap/js/fontawesome-all.js"></script>
 
-     <script defer src="/vendor/bootstrap/js/fontawesome-all.js"></script>
-
-
+  <style>
+  /* Make the image fully responsive */
+    .carousel-inner img {
+        width: 100%;
+        height: 100%;
+    }
+  </style>
 
 
   </head>
@@ -89,23 +98,40 @@
         </div>
         
         </br>
-       
-        <div class="sister-title">Big &amp; Little Reveal</div>
-        <div class="sister-body">
-           Big &amp; Little Reveal is definitely one of the highlights of the quarter when we do recruitment. Throughout the weekend, new members are showered with clues, treats and gifts from their mystery Bigs. Gifts are delivered in baskets. It’s all fun and excitement as each new member spends all weekend trying to piece together the clues to guess which sister she’ll get to call her Big. 
-         </br>
-         </br>
-           Reveal usually happens after Monday night meeting. Littles received their last basket on Monday which includes a costume for them to wear to reveal. Their big and the big's family line all coordinate their outfits to match the little's costume. It is so amazing to see every little's face light up when their big is revealed. Once every Big &amp; Little pairing is revealed and pictures are taken, all the different family lines go off to celebrate. In the past, we've had some families go to In-N-Out, BJ's, and La Jolla Shores!
-        </div>
+       <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <div class="sister-title">Big &amp; Little Reveal</div>
+            <div class="sister-body">
+               Big &amp; Little Reveal is definitely one of the highlights of the quarter when we do recruitment. Throughout the weekend, new members are showered with clues, treats and gifts from their mystery Bigs. Gifts are delivered in baskets. It’s all fun and excitement as each new member spends all weekend trying to piece together the clues to guess which sister she’ll get to call her Big. 
+             </br>
+             </br>
+               Reveal usually happens after Monday night meeting. Littles received their last basket on Monday which includes a costume for them to wear to reveal. Their big and the big's family line all coordinate their outfits to match the little's costume. It is so amazing to see every little's face light up when their big is revealed. Once every Big &amp; Little pairing is revealed and pictures are taken, all the different family lines go off to celebrate. In the past, we've had some families go to In-N-Out, BJ's, and La Jolla Shores!
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div id="demo" class="carousel slide" data-ride="carousel">
+              <!-- The slideshow -->
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="./images/sisterhood/biglil3.jpeg" alt="Los Angeles" width="1100" height="500">
+                </div>
+                <div class="carousel-item">
+                  <img src="./images/sisterhood/biglil1.png" alt="Chicago" width="1100" height="500">
+                </div>
+                <div class="carousel-item">
+                  <img src="./images/sisterhood/biglil2.png" alt="New York" width="1100" height="500">
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
 
-        </br>
 
         <div class="sister-title">Sisterhood Retreats</div>
         <div class="sister-body">
            Twice a year, our chapter decides to go on a mini get-away with all of our sisters! The first retreat of the year happens right before school starts. This retreat allows for all our returning members to bond with each as we prepare for formal fall recruitment. The second retreat takes place during winter or spring quarer. This trip provides a great opportunity for older Tri Deltas to get to know the new members and share funny stories as they reminisce on their past.  
         </div>
-
-        </br>
 
         <div class="sister-title">Delta Dates</div>
         <div class="sister-body">
