--- a/template.html
+++ b/template.html
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
 
         <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav mr-auto" >
                 <li class="nav-item">
                     <a class="nav-link" href="#">About Us</a>
                 </li>
@@ -51,7 +51,7 @@
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Leadership</a>
+                    <a class="nav-link" href="leadership.html">Leadership</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Sisterhood</a>
@@ -62,19 +62,22 @@
             </ul>
         </div>
     </nav>
+    <div class="w3-display-container">
+      <img src="images/banner-2.jpeg"  style="width:100%;height:100%">
+    </div>
 
-
-    <!-- Header image -->
+    <!-- Header image 
     <header>
 
-          <!-- Slide One - Set the background image for this slide in the line below -->
-          <div class="carousel-item active" style="background-image: url('images/banner-1.jpeg'); z-index: 2">
+          Slide One - Set the background image for this slide in the line below
+          <div class="carousel-item active" style="background-image: url('images/banner-1.jpeg');">
             <div class="carousel-caption d-none d-md-block">
               <h2>PLACEHOLDER</h2>
             </div>
           </div>
  
-    </header>
+    </header> 
+   -->
 
     <!-- Page Content -->
     <div class="container">
