fixed footer and events

--- a/template.html
+++ b/template.html
@@ -31,8 +31,9 @@
   <body>
 
 <!-- Navigation -->
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-
+ <!-- Navigation -->
+  <div id="menu" class="navbar navbar-default navbar-custom">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color:#FEA17E">
         <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
@@ -65,12 +66,12 @@
                     <a class="nav-link" href="sisterhood.html">Sisterhood</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Philanthropy</a>
+                    <a class="nav-link" href="philanthropy.html">Philanthropy</a>
                 </li>
             </ul>
         </div>
     </nav>
-
+  </div>
 
     <!-- Page Content -->
    <!--  <div class="container">
