fixed styling to footer

--- a/events.html
+++ b/events.html
@@ -170,7 +170,7 @@
       <div class="row">
         
         <div class="col-sm-4">
-          <div class="footer-text1">Delta Delta Delta <br> Gamma Lambda <br><br>University of California, San Diego</div>
+          <div class="footer-text1">Delta Delta Delta <br> Gamma Lambda <br><br>University of California,<br>San Diego</div>
         </div>
 
         <div class="col-sm-4 login">
@@ -193,6 +193,7 @@
           <div class="social-media">
             <i class="fab fa-facebook-f"></i>
             <i class="fab fa-instagram"></i>
+            <i class="fab fa-tumblr"></i>
             <i class="fab fa-pinterest-p"></i>
             <i class="fab fa-twitter"></i>
           </div>
