--- a/template.html
+++ b/template.html
@@ -95,7 +95,7 @@
       <div class="row">
         
         <div class="col-sm-4">
-          <div class="footer-text1">Delta Delta Delta <br> Gamma Lambda <br><br>University of California, San Diego</div>
+          <div class="footer-text1">Delta Delta Delta <br> Gamma Lambda <br><br>University of California,<br>San Diego</div>
         </div>
 
         <div class="col-sm-4 login">
@@ -114,10 +114,11 @@
            
          <!-- Social Media Icons-->
         <div class="col-sm-4">
-          <div class="footer-text">Follow UCSD Tri Delta</div>
+          <div class="footer-text2">Follow UCSD Tri Delta</div>
           <div class="social-media">
             <i class="fab fa-facebook-f"></i>
             <i class="fab fa-instagram"></i>
+            <i class="fab fa-tumblr"></i>
             <i class="fab fa-pinterest-p"></i>
             <i class="fab fa-twitter"></i>
           </div>
