fixed footer styling for template, events, and sisterhood

--- a/events.html
+++ b/events.html
@@ -193,6 +193,7 @@
           <div class="social-media">
             <i class="fab fa-facebook-f"></i>
             <i class="fab fa-instagram"></i>
+            <i class="fab fa-tumblr"></i>
             <i class="fab fa-pinterest-p"></i>
             <i class="fab fa-twitter"></i>
           </div>
