--- a/template.html
+++ b/template.html
@@ -114,10 +114,11 @@
            
          <!-- Social Media Icons-->
         <div class="col-sm-4">
-          <div class="footer-text">Follow UCSD Tri Delta</div>
+          <div class="footer-text2">Follow UCSD Tri Delta</div>
           <div class="social-media">
             <i class="fab fa-facebook-f"></i>
             <i class="fab fa-instagram"></i>
+            <i class="fab fa-tumblr"></i>
             <i class="fab fa-pinterest-p"></i>
             <i class="fab fa-twitter"></i>
           </div>
