Minor fix from tracy
Linking each page

--- a/leadership.html
+++ b/leadership.html
@@ -63,30 +63,33 @@
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Leadership</a>
+                    <a class="nav-link" href="leadership.html">Leadership</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="sisterhood.html">Sisterhood</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Philanthropy</a>
+                    <a class="nav-link" href="philanthropy.html">Philanthropy</a>
                 </li>
             </ul>
         </div>
     </nav>
   </div>
 
-  <div class="w3-display-container">
+  <div class="w3-display-container w3-padding-64">
     <img src="images/banner-2.jpeg"  style="width:100%">
   </div>
 
 
 
   <!-- Page Content -->
-  <div class="container w3-padding-64">
+  <div class="container w3-padding-8">
+    <div class = "w3-container w3-center">
+      <h2> Leadership </h2>
+    </div>
 
     <!-- Row 1 -->
-    <div class="w3-cell-row w3-padding-32">
+    <div class="w3-cell-row w3-padding-48">
 
       <!-- column 1 -->
       <div class="w3-container w3-cell w3-mobile" style="padding-left:10px; padding-right:10px">
