--- a/philanthropy.html
+++ b/philanthropy.html
@@ -157,7 +157,7 @@ Table</a>
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Leadership</a>
+                    <a class="nav-link" href="leadership.html">Leadership</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="sisterhood.html">Sisterhood</a>
