correct css; link every html pages

--- a/leadership.html
+++ b/leadership.html
@@ -76,11 +76,13 @@
     </nav>
   </div>
 
-  <div class="w3-display-container w3-padding-64">
-    <img src="images/banner-2.jpeg"  style="width:100%">
+
+  <div class="banner">
+      <img class="banner-image" src="images/banner-2.jpeg">
+    <div class="banner-text">
+      <p> Leadership </p>
+    </div>
   </div>
-
-
 
   <!-- Page Content -->
   <div class="container w3-padding-8">
@@ -101,25 +103,24 @@
         <div class="w3-card-4">
           <img src="images/leadership/test-1.png" class = "w3-padding w3-padding-24" style = "width:100%" alt="president">
           <div class="w3-container w3-center">
-            <p>President</p>
+            <h5>President</h5>
           </div>
         </div>
 
         <!-- Quote -->
         <div class="w3-panel w3-leftbar">
-          <p><i class="fa fa-quote-left w3-large"></i>
+          <h5><i class="fa fa-quote-left w3-large"></i>
             <i class="w3-serif w3-large">This is where a couple of sentences from the officer will be explaining their favorite memory about Tri Delta.</i>
             <i class="fa fa-quote-right w3-large"></i>
-          </p>
+          </h5>
         </div>
 
         <div class = "w3-container">
-          <p>
             Major: International Business <br>
             Hometown: Huntington Beach <br>
             Year: Second <br>
             Email: ucsd.ddd.president@gmail.com <br>
-          </p>
+
         </div>
       </div>
 
@@ -133,25 +134,25 @@
         <div class="w3-card-4">
           <img src="images/leadership/test-1.png" class = "w3-padding w3-padding-24" style = "width:100%" alt="president">
           <div class="w3-container w3-center">
-            <p>President</p>
+            <h5>President</h5>
           </div>
         </div>
 
         <!-- Quote -->
         <div class="w3-panel w3-leftbar">
-          <p><i class="fa fa-quote-left w3-large"></i>
+          <h5><i class="fa fa-quote-left w3-large"></i>
             <i class="w3-serif w3-large">This is where a couple of sentences from the officer will be explaining their favorite memory about Tri Delta.</i>
             <i class="fa fa-quote-right w3-large"></i>
-          </p>
+          </h5>
         </div>
 
         <div class = "w3-container">
-          <p>
+
             Major: International Business <br>
             Hometown: Huntington Beach <br>
             Year: Second <br>
             Email: ucsd.ddd.president@gmail.com <br>
-          </p>
+
         </div>
       </div>
 
@@ -165,25 +166,25 @@
         <div class="w3-card-4">
           <img src="images/leadership/test-1.png" class = "w3-padding w3-padding-24" style = "width:100%" alt="president">
           <div class="w3-container w3-center">
-            <p>President</p>
+            <h5>President</h5>
           </div>
         </div>
 
         <!-- Quote -->
         <div class="w3-panel w3-leftbar">
-          <p><i class="fa fa-quote-left w3-large"></i>
+          <h5><i class="fa fa-quote-left w3-large"></i>
             <i class="w3-serif w3-large">This is where a couple of sentences from the officer will be explaining their favorite memory about Tri Delta.</i>
             <i class="fa fa-quote-right w3-large"></i>
-          </p>
+          </h5>
         </div>
 
         <div class = "w3-container">
-          <p>
+
             Major: International Business <br>
             Hometown: Huntington Beach <br>
             Year: Second <br>
             Email: ucsd.ddd.president@gmail.com <br>
-          </p>
+
         </div>
       </div>
 
@@ -199,25 +200,25 @@
         <div class="w3-card-4">
           <img src="images/leadership/test-1.png" class = "w3-padding w3-padding-24" style = "width:100%" alt="president">
           <div class="w3-container w3-center">
-            <p>President</p>
+            <h5>President</h5>
           </div>
         </div>
 
         <!-- Quote -->
         <div class="w3-panel w3-leftbar">
-          <p><i class="fa fa-quote-left w3-large"></i>
+          <h5><i class="fa fa-quote-left w3-large"></i>
             <i class="w3-serif w3-large">This is where a couple of sentences from the officer will be explaining their favorite memory about Tri Delta.</i>
             <i class="fa fa-quote-right w3-large"></i>
-          </p>
+          </h5>
         </div>
 
         <div class = "w3-container">
-          <p>
+
             Major: International Business <br>
             Hometown: Huntington Beach <br>
             Year: Second <br>
             Email: ucsd.ddd.president@gmail.com <br>
-          </p>
+
         </div>
         </div>
 
@@ -228,24 +229,24 @@
         <div class="w3-card-4">
           <img src="images/leadership/test-1.png" class = "w3-padding w3-padding-24" style = "width:100%" alt="president">
           <div class="w3-container w3-center">
-            <p>President</p>
+            <h5>President</h5>
           </div>
         </div>
         <!-- Quote -->
         <div class="w3-panel w3-leftbar">
-          <p><i class="fa fa-quote-left w3-large"></i>
+          <h5><i class="fa fa-quote-left w3-large"></i>
             <i class="w3-serif w3-large">This is where a couple of sentences from the officer will be explaining their favorite memory about Tri Delta.</i>
             <i class="fa fa-quote-right w3-large"></i>
-          </p>
+          </h5>
         </div>
 
         <div class = "w3-container">
-          <p>
+
             Major: International Business <br>
             Hometown: Huntington Beach <br>
             Year: Second <br>
             Email: ucsd.ddd.president@gmail.com <br>
-          </p>
+
         </div>
         </div>
 
@@ -256,24 +257,24 @@
         <div class="w3-card-4">
           <img src="images/leadership/test-1.png" class = "w3-padding w3-padding-24" style = "width:100%" alt="president">
           <div class="w3-container w3-center">
-            <p>President</p>
+            <h5>President</h5>
           </div>
         </div>
         <!-- Quote -->
         <div class="w3-panel w3-leftbar">
-          <p><i class="fa fa-quote-left w3-large"></i>
+          <h5><i class="fa fa-quote-left w3-large"></i>
             <i class="w3-serif w3-large">This is where a couple of sentences from the officer will be explaining their favorite memory about Tri Delta.</i>
             <i class="fa fa-quote-right w3-large"></i>
-          </p>
+          </h5>
         </div>
 
         <div class = "w3-container">
-          <p>
+
             Major: International Business <br>
             Hometown: Huntington Beach <br>
             Year: Second <br>
             Email: ucsd.ddd.president@gmail.com <br>
-          </p>
+
         </div>
         </div>
       </div>
