--- a/philanthropy.html
+++ b/philanthropy.html
@@ -202,11 +202,11 @@ alt="">
           <p style="text-align:center">
             A letter from our
           </p>
-          <h1 style="text-align:center">
+          <h3 style="text-align:center">
             Philanthropy Chair
-            </h1>
+            </h3>
             <br>
-          <p style="text-align:left">
+          <h5 style="text-align:left">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos,
 doloribus, dolorem iusto blanditiis unde eius illum
 consequuntur neque dicta incidunt ullam ea hic porro optio
@@ -223,13 +223,13 @@ recusandae laborum minus inventore?
 Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe
 quibusdam sit excepturi nam quia corporis eligendi eos magni
 recusandae laborum minus inventore?
-          </p>
+          </h5>
           <p style="text-align:center">
             Delta Love and Mine,
           </p>
-          <h1 style="text-align:center">
+          <h3 style="text-align:center">
             Name of Phil Chair
-          </h1>
+          </h3>
           <p style="text-align:center">
             Philanthropy Chair
           </p>
