--- a/events.html
+++ b/events.html
@@ -25,14 +25,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
     <script defer src="/vendor/bootstrap/js/fontawesome-all.js"></script>
-
-
-
-
   </head>
 
   <body>
-
 
 <!-- Navigation -->
   <div id="menu" class="navbar navbar-default navbar-custom">
@@ -63,7 +58,7 @@
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Leadership</a>
+                    <a class="nav-link" href="Leadership.html">Leadership</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="sisterhood.html">Sisterhood</a>
