--- a/template.html
+++ b/template.html
@@ -31,7 +31,6 @@
   <body>
 
 <!-- Navigation -->
- <!-- Navigation -->
   <div id="menu" class="navbar navbar-default navbar-custom">
     <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color:#FEA17E">
         <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
@@ -40,7 +39,7 @@
                     <a class="nav-link" href="#">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Recruitment</a>
+                    <a class="nav-link" href="recruitment.html">Recruitment</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="events.html">Events</a>
