--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="w3-cell-row w3-padding-48" id="w3contentbox">
 
       <!-- column 1 -->
-      <div class="w3-container w3-cell w3-mobile" style="padding-left:10px; padding-right:10px">
+      <div class="w3-container w3-cell w3-mobile" id="presidentcardbox" style="padding-left:10px; padding-right:10px">
 
         <div class="w3-container w3-center" style = "padding-bottom: 1rem">
         </div>
@@ -116,8 +116,11 @@
         <!-- Letter from President -->
 
         <h5><i class="fa fa-quote-left w3-large"></i>
-            <i class="w3-serif w3-large">This section will feature a letter from the DELTA DELTA DELTA President
-              talking about why she is a member and reaching out to potential members</i>
+            <i class="w3-serif w3-large">Welcome to Tri Delta at UCSD! I would like to invite you to take a look around and see exactly what makes this chapter such an incredible home for my sisters and me. The Gamma Lambda chapter here at UCSD is full of talented, brilliant women with resounding dedication to each other and an outstanding drive to succeed.
+
+We are brave, bold, and kind to each other, our Panhellenic sisters, and the UCSD community. We are passionate about service and striving to be the best versions of ourselves. And we are dedicated to helping women live, learn, and lead.
+
+I hope my sisters and I can provide an authentic opportunity for you to Bring You, your hopes, aspirations, failures, and successes. As the President of the Tri Delta chapter at UCSD I can say with the utmost certainty that I’ve never encountered such an incredibly funny, witty, and compassionate group of young women. They truly embody our values of truth, self sacrifice, and friendship. Welcome to our chapter and I hope you experience the love and kindness of women I am honored to call sisters.</i>
             <i class="fa fa-quote-right w3-large"></i>
         </h5>
         <div class="w3-container w3-center"> 
