put leadership.html, events.html, and sisterhood.html in containers

--- a/sisterhood.html
+++ b/sisterhood.html
@@ -86,7 +86,7 @@
   <div class="banner">
       <img class="banner-image" src="./images/events/spiritnight.jpg">
     <div class="banner-text">
-      <p>Sisterhood</p>
+      Sisterhood
     </div>
   </div>
 
