--- a/leadership.html
+++ b/leadership.html
@@ -85,7 +85,7 @@
   </div>
 
   <!-- Page Content -->
-<div class="leadershippage">
+<div class="container leadershippage">
   <div class="container w3-padding-8">
     <!-- <div class = "w3-container w3-center">
       <h2> Leadership </h2>
