--- a/leadership.html
+++ b/leadership.html
@@ -285,7 +285,7 @@
 </div>
 
 <!--FOOTER START -->   
-<footer class="py-3" style="background-color:#FEA17E">
+<footer class="py-3 w3-mobile" style="background-color:#FEA17E">
   <div class="container">
     <div class="row">
 
@@ -326,11 +326,13 @@
           <i class="fab fa-tumblr"></i>
           <i class="fab fa-twitter"></i>
         </div>
-        <div class="contact-us">
-          Contact Us!
-        </div>
-        <div class="vppr-email">
-          ucsd.ddd.vppr@gmail.com
+        <div class="contianer">
+          <div class="contact-us">
+            Contact Us!
+          </div>
+          <div class="vppr-email">
+            ucsd.ddd.vppr@gmail.com
+          </div>
         </div>
       </div><!--col-sm-4-->
     </div> <!--row-->
