fixed footer and stuffs

--- a/sisterhood.html
+++ b/sisterhood.html
@@ -71,6 +71,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="events.html">Events</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="FAQ.html">FAQ</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -258,6 +261,7 @@
 </div>
 </div>
 
+    </div>
     </div>
 
  <!--FOOTER START -->   
